[FIX][UI] Fix color contrast issues in Amelia theme for WAI compliance

--- a/themes/amelia/css/newsletter.css
+++ b/themes/amelia/css/newsletter.css
@@ -1,29 +1,17 @@
 /* Amelia theme newsletter stylesheet  */
 @import url("//fonts.googleapis.com/css?family=Lobster|Cabin:400,700");
-body.fullscreen {
-  background: #108a93;
-}
-.bg-dark {
-  background: #ad1d28 !important;
-}
-body.fullscreen {
-  background: #108a93;
-}
-body.fullscreen {
-  background-color: #108a93;
-}
 body {
-  background: #108a93;
-  color: #ffffff;
+  background: #0c6369;
+  color: #fff;
   font-family: var(--bs-font-sans-serif);
   padding: 15px;
 }
 a, a:visited {
-  color: #e8d069;
+  color: #f2e8c0;
   text-decoration: underline;
 }
 a:hover {
-  color: #e8d069;
+  color: #f2e8c0;
   text-decoration: underline;
 }
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
@@ -32,7 +20,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 .card {
   margin-bottom: 1.5;
-  background-color: #fff;
+  background-color: #0D6C73;
   border: 1px solid transparent;
   border-radius: 0.25rem;
 }
@@ -52,4 +40,3 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: "Lobster", sans-serif;
   font-weight: 500;
 }
-/*# sourceMappingURL=newsletter.css.map */
