--- a/themes/amelia/scss/_tiki-selectors.scss
+++ b/themes/amelia/scss/_tiki-selectors.scss
@@ -1,31 +1,48 @@
-//
-// Variables defined by functions, etc. or by Bootstrap defaults.
-$link-color: lighten($warning, 15%);
-$gray-500: lighten(#000000, 33.5%); //
-$link-hover-color: $link-color; // This has to be here because #link-color is defined by bs default, not be amelia.
-$body-bg: #108a93; // These work here, but not in amelia/scss/variables, for some reason.
-$body-color: #ffffff; // "
-body.fullscreen { background: $body-bg; } // Moved here because it needs $body-bg
+// This file is for additional SCSS rules beyond what are in variables.scss.
+// Amelia for Tiki Bootstrap 5
 
-// Amelia 3.1.1
+// Image path example:
+//$imagePath: "../images/";
+// body {
+//    background-image: url('#{$imagePath}bg.jpg');
+// }
 
-// Forms ======================================================================
+// Color system
+.bg-dark { background: #ad1d28 !important; }
 
+// Body
+body.fullscreen { background: $body-bg; }
+
+// Typography
+.text-primary { color: #F9CFC8 !important; }
+.text-secondary { color: #E7D58D !important; }
+.text-info { color: #DFD7EE !important; }
+.text-success, .valid-feedback { color: #AEE6A7  !important; }
+.text-warning { color: #EDDFA6  !important; }
+.text-danger, .invalid-feedback, .was-validated .form-check-input:invalid ~ .form-check-label, .form-check-input.is-invalid ~ .form-check-label { color: #F3D7C4  !important; }
+
+// Forms
 legend {
     font-family: 'Lobster', cursive;
     color: #ffffff;
 }
 
+// Cards
 .card,
 .autotoc > .nav {
-  background-color: #13a0aa !important;
+//  background-color: #13a0aa !important;
   border-color: #0d747c !important;
+}
+
+.card-body  a:not(.btn),
+.card-body .btn-link {
+    color: #F2E4A6;
 }
 
 .card-header,
 .modal-header{
   color: #ffffff;
-  background-color: #18cbd8 !important;
+  background-color: #6e0d0d !important;
   border-color: #0d747c !important;
 }
 
@@ -37,6 +54,34 @@ legend {
   color: inherit;
 }
 
-.navbar-light .cssmenu_horiz > li > a {
+// Navs
+.navbar-light .cssmenu_horiz > li > a { // Old
   color: $navbar-light-color;
 }
+
+// Buttons
+.btn.btn-outline-dark {
+    color: #de3b48;
+    background: #000;
+    &:hover {
+        background: $gray-800;
+    }
+}
+
+// Accordion
+.accordion-button { background: $dark; }
+.accordion-button:not(.collapsed) {
+    color: #ddb9af;
+    background-color: #6e0d0d; }
+
+// Badges
+.badge.bg-dark { color: #fff; }
+
+// Tiki-specific
+.tiki_trackers {
+    .icon-status-open, .icon-status-pending, .icon-status-closed {
+        filter: drop-shadow(0 0 1px black);
+    }
+}
+
+.textarea-toolbar a.toolbar { color: #222; }
