--- a/themes/amelia/scss/_variables.scss
+++ b/themes/amelia/scss/_variables.scss
@@ -1,59 +1,99 @@
 // $Id$
-// Amelia for Bootstrap 4
+// Amelia for Bootstrap 5
 // Variables
 
 // - - - - - - - Bootstrap variables (override values in vendor_bundled/vendor/twbs/bootstrap/scss/_variables.scss - - - - - - //
 
-// Colors
-$gray-900: #111111;
-$gray-700: #444444;
-$gray-500: lighten(#000000, 33.5%); //
-$gray-300: #bbbbbb;
-$gray-100: #dddddd;
+// Color system
+$gray-900: #212529;
+$gray-800: #343a40;
+$gray-700: #495057;
+$gray-600: #6c757d;
+$gray-500: #adb5bd; //  lighten(#000000, 33.5%); //
+$gray-400: #ced4da;
+$gray-300: #dee2e6;
+$gray-200: #e9ecef;
+$gray-100: #f8f9fa ;
 $white: #fff;
 $black: #000;
 
-$primary: #ad1d28; //These aren't overriding the defaults in this position, so were added to amelia.scss at the top.
-$secondary: #82241b;
-$success: #48ca3b;
-$info:    #4d3a7d;
-$warning: #debb27;
-$danger:  #df6e1e;
+$primary: #F5CDC2; // #f5af9f;  // #F3C9C9;
+$secondary: #E2CBCB;
+$success: #A5E4A0;
+$info: #D5CDEA;
+$warning: #E4D081;
+$danger: #EEC9AF;
+$dark: #ad1d28;
 
 $theme-colors: (
-    "primary":            #ad1d28,
-    "secondary":         #82241b,
-    "success":             #48ca3b,
-    "info":               #4d3a7d,
-    "warning":             #debb27,
-    "danger":              #df6e1e,
-    "light":            #18cbd8,
-    "dark":                #ad1d28
+    "primary":           #F5CDC2, // #f5af9f, //#F3C9C9, // #ad1d28,
+    "secondary":         #E2CBCB, // #c05a50, // #82241b,
+    "success":           #A5E4A0, // #81da78, // #48ca3b,
+    "info":              #D5CDEA, // #907bc7, // #4d3a7d,
+    "warning":           #E4D081, // #e0c96b,
+    "danger":            #EEC9AF, // #d98c56,
+    "light":             #5AE3ED, // #18cbd8,
+    "dark":              #ad1d28, // $black,
 );
 
 // Options
+// Gradient
 // Spacing
 // Body
-$body-bg: #108a93;
+$body-bg: #0c6369; // #108a93; WAI
 $body-color: #fff;
 
+// Utility maps
 // Links
 $link-color: lighten($warning, 15%);
 $link-hover-color: $link-color;
 $link-hover-decoration: underline;
 
+// Paragraphs
+// Grid breakpoints
+// Grid containers
+// Grid columns
+// Container padding
 //Components
 $padding-base-vertical: .5rem;
 $padding-large-vertical: .9rem;
 
+// Typography
 //Fonts
 $font-family-sans-serif: "Cabin", Arial, sans-serif;
 $headings-font-family: 'Lobster', cursive;
+$blockquote-footer-color: #E6E8EA;
+$text-muted:                  $gray-200;
 
 // Tables
 $table-head-bg: #108a93;
 $table-head-color: #fff;
+
 // Forms
+$input-bg: $gray-100;
+$input-color: $gray-800;
+
+// Form validation
+// Z-index master list
+// Navs
+$nav-link-color:                    $link-color;
+$nav-tabs-link-active-color: $body-color;
+$nav-link-disabled-color: darken($nav-link-color, 10%);
+$nav-pills-link-active-bg: darken($body-bg, 8%);
+
+// Navbar
+$navbar-dark-color:                 $link-color;
+$navbar-dark-hover-color:           lighten($navbar-dark-color, 25%);
+$navbar-dark-active-color:          $navbar-dark-color;
+$navbar-dark-disabled-color:        lighten($navbar-dark-color, 50%);
+
+$navbar-light-color:                $black;
+$navbar-light-hover-color:          rgba($black, .7) !default;
+$navbar-light-active-color:         rgba($black, .9) !default;
+$navbar-light-disabled-color:       rgba($black, .3) !default;
+
+// Navbar links
+
 // Dropdowns
 $dropdown-bg:                      #fff;
 $dropdown-border-color:            #444;
@@ -61,26 +101,29 @@ $dropdown-link-color:              #444;
 $dropdown-link-hover-color:        #fff;
 $dropdown-link-hover-bg:           #15b5c1;
 
-// Navs
-// Navbar
-$navbar-dark-color:                 $link-color;
-$navbar-dark-hover-color:           lighten($navbar-dark-color, 25%);
-$navbar-dark-active-color:          $navbar-dark-color;
-$navbar-dark-disabled-color:        lighten($navbar-dark-color, 50%);
-
-$navbar-light-color:                rgba($black, .5) !default;
-$navbar-light-hover-color:          rgba($black, .7) !default;
-$navbar-light-active-color:         rgba($black, .9) !default;
-$navbar-light-disabled-color:       rgba($black, .3) !default;
-
-// Navbarlinks
 // Pagination
-$pagination-bg: lighten($body-bg, 10%);
+$pagination-bg: #0C5055;
 
-// Jumbotron
+// Pagination
+$pagination-bg: $body-bg;
+$pagination-focus-color: darken($link-color,8%);
+$pagination-focus-bg: darken($pagination-bg,8%);
+$pagination-hover-color: $link-color;
+$pagination-hover-bg: lighten($pagination-bg,10%);
+$pagination-active-color: #fff;
+$pagination-active-bg: $dark;
+$pagination-disabled-color: $pagination-focus-color;
+$pagination-disabled-bg: #094344;
+
+    // Jumbotron (retired)
 $jumbotron-bg: darken($body-bg, 5%);
 
 // Cards
+$card-bg: #0D6C73;
+$card-border-color: #0d747c;
+$card-cap-bg: #0D676E;
+
+// Accordion
 // Tooltips
 // Popovers
 $popover-bg: #13a0aa;
@@ -88,41 +131,40 @@ $popover-body-color: #fff;
 $popover-header-bg: #18cbd8;
 $popover-header-color: #fff;
 
+// Toasts
 // Badges
+$badge-color: #000;
+
 // Modals
 $modal-content-bg: $body-bg;
+
 // Alerts
 // Progress bars
 // List group
 $list-group-bg: $body-bg;
+$list-group-color: darken($body-color, 8%);
+$list-group-disabled-color: darken($list-group-color, 10%);
+
 // Image thumbnails
 // Figures
+$figure-caption-color: $gray-100;
+
 // Breadcrumbs
-$breadcrumb-bg: lighten($body-bg, 10%);
+$breadcrumb-bg: #0C5055;
+$breadcrumb-active-color: #BDBDBD;
 
 // Carousel
 // Close
+// Offcanvas
 // Code
-
-$bg-dark: #ad1d28 !important;
-$navbar-dark-bg: #ad1d28 !important;
-body.fullscreen { background: $body-bg; }
-.bg-dark { background: #ad1d28 !important; }
 
 // - - - - - - - - - -  - - - - - - Other variables, if any - - - - - - - - - - - - - - - - - //
 
-body.fullscreen { background: $body-bg; }
+$bg-dark: #ad1d28 !important;
+$navbar-dark-bg: #ad1d28 !important;
 
-$link-color: lighten($warning, 15%);
-$gray-500: lighten(#000000, 33.5%); //
-$link-hover-color: $link-color; // This has to be here because #link-color is defined by bs default, not be amelia.
-$body-bg: #108a93; // These work here, but not in amelia/bootstrap-variables, for some reason.
-$body-color: #ffffff; // "
-body.fullscreen { background-color: $body-bg; } // Moved here because it needs $body-bg
-
-$blockquote-color: #e5e5e5;
-$blockquote-left-border-color: #e5e5e5;
-
+$blockquote-color: #E6E8EA;
+$blockquote-left-border-color: #E6E8EA;
 $dropdown-item: $dropdown-link-color;
 
 //$megamenu-dropdown-link-color: $dropdown-link-color;
